Bug 105852 - RTF Import: wrong table import:cells in table are merged incorrectly
Summary: RTF Import: wrong table import:cells in table are merged incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2017-02-08 08:57 UTC by Mike Kaganski
Modified: 2017-02-24 08:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample RTF to test wrong cells merge (14.08 KB, application/msword)
2017-02-08 08:57 UTC, Mike Kaganski
Details
PDF: Correct import in 4.2.0.4 (20.10 KB, application/pdf)
2017-02-08 08:58 UTC, Mike Kaganski
Details
PDF: Wrong import in 4.3.0.4 (18.07 KB, application/pdf)
2017-02-08 08:59 UTC, Mike Kaganski
Details
PDF: MS Word reference (122.01 KB, application/pdf)
2017-02-08 08:59 UTC, Mike Kaganski
Details
ZIP with RTF that is imported very slowly since version 4.3 (514.22 KB, application/x-zip-compressed)
2017-02-08 09:17 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2017-02-08 08:57:59 UTC
Created attachment 131003 [details]
Sample RTF to test wrong cells merge

Attached file is imported with all cells above last row merged. Actually, there are a number of rows and columns there, two of those rows have their columns merged.

Tested with Version: 5.4.0.0.alpha0+
Build ID: 9e7a206c4da481f295285c06480a1be82ad77a0d
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
Locale: ru-RU (ru_RU); Calc: group

Already reproducible with Version: 4.3.0.4
Build ID: 62ad5818884a2fc2e5780dd45466868d41009ec0

Worked OK with Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
 -> regression

mike@mike-Ubuntu16:~/bibisect-43max$ git bisect log
# bad: [74b89c3193673ba9897dc4a4541500ef6e8d9bf7] source-hash-8f97326bdd3f42fc82aa5e1989fd03b0af1daf64
# good: [9c392cfdfe6e9a9bce98555ea989283a957aa3ad] source-hash-fc8f44e82de4ebdd50ac5fbb9207cd1a59a927e3
git bisect start 'latest' 'oldest'
# bad: [e289d9d328719fd70e9a2680fd0e4f586a97b3be] source-hash-3c0a7cf4f67720f2cca2c4eb543f838d5b644e7f
git bisect bad e289d9d328719fd70e9a2680fd0e4f586a97b3be
# bad: [0327d0bc45d60df0d1c8ac2470cf252b6bb8f780] source-hash-38fed70782ae6ac6b0282897c7abc6fa33a6de9e
git bisect bad 0327d0bc45d60df0d1c8ac2470cf252b6bb8f780
# good: [130c0f90cdc74b7300c74ee7d49c459ea8b8c4f4] source-hash-4a969ac35174520f1ffeb4f919f5d7bb6d99a628
git bisect good 130c0f90cdc74b7300c74ee7d49c459ea8b8c4f4
# good: [1da4e86b6024553eadebfbcd00fd147590ec778f] source-hash-766f718ebb4deda1a294cc1cfe137a75dfb0f6f8
git bisect good 1da4e86b6024553eadebfbcd00fd147590ec778f
# good: [99861844b95ad16a7671cf9f0d2f3c8deacaec1d] source-hash-910b7bf6c6870fed56c4450ed54303a23f5a23da
git bisect good 99861844b95ad16a7671cf9f0d2f3c8deacaec1d
# good: [a1f0c924be9103e197dee5bc85d5de63241cece6] source-hash-22bb2660ebd068c89fccda8a6c58d2a5a7bdcca8
git bisect good a1f0c924be9103e197dee5bc85d5de63241cece6
# good: [cc20b0f90ba20d8ebe91cc70909a69f978c8a016] source-hash-0abd70662929c5a7b173be1b41dac4dea434b3e1
git bisect good cc20b0f90ba20d8ebe91cc70909a69f978c8a016
# bad: [12af38cb03997d2e7cc3802f3db0aa8aeb45c761] source-hash-15a0b755501273ce1d1be4da567eaed5a468bf75
git bisect bad 12af38cb03997d2e7cc3802f3db0aa8aeb45c761
# bad: [be099229a17395a80d254293b29097509f05b88b] source-hash-93a2279c267e8c017550c4fe435d8c2718405aa2
git bisect bad be099229a17395a80d254293b29097509f05b88b
# good: [ffbdf02b818f6b278284143b1d15b403cfe9d6e9] source-hash-4b36dcefe5f57ba257dc0c80551aef4596bf1258
git bisect good ffbdf02b818f6b278284143b1d15b403cfe9d6e9
# bad: [ea244ed7b4e0a7df0eb2eb1ef604ce0f085dd323] source-hash-334248a08ab0e6b0e8631253fe3906afa20db441
git bisect bad ea244ed7b4e0a7df0eb2eb1ef604ce0f085dd323
# bad: [15369eb808de665d03081840e9396da940e4d615] source-hash-11f63d1a614089c83b1ea93f8e93b1e7f7b2035d
git bisect bad 15369eb808de665d03081840e9396da940e4d615
# bad: [c4f621415c58d9b2f5dc916ad390478355eb484c] source-hash-2bc11eb5f42a7ac7e54ce06eb4270998ed293cfd
git bisect bad c4f621415c58d9b2f5dc916ad390478355eb484c
# good: [5de0abc6bec42f35b834003350be207a253d15f9] source-hash-8c04ab3dfe2a85cb02b083bbe86fac2ec1c6967b
git bisect good 5de0abc6bec42f35b834003350be207a253d15f9
# first bad commit: [c4f621415c58d9b2f5dc916ad390478355eb484c] source-hash-2bc11eb5f42a7ac7e54ce06eb4270998ed293cfd
 c4f621415c58d9b2f5dc916ad390478355eb484c is the first bad commit
commit c4f621415c58d9b2f5dc916ad390478355eb484c
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Thu May 28 18:31:43 2015 +0800

    source-hash-2bc11eb5f42a7ac7e54ce06eb4270998ed293cfd
    
    Bibisect: This commit covers the following source commit(s) which failed to build
    a9f94e571cb5797413d2d03f709084779fcfc914
    
    commit 2bc11eb5f42a7ac7e54ce06eb4270998ed293cfd
    Author:     Matúš Kukan <matus.kukan@collabora.com>
    AuthorDate: Thu Jan 23 16:46:45 2014 +0100
    Commit:     Matúš Kukan <matus.kukan@collabora.com>
    CommitDate: Thu Jan 23 23:39:10 2014 +0100
    
        tk: Constructor feature for DefaultGridColumnModel.
    
        Change-Id: Ia4d20eb2a3c91fbdb1dd85c37b8162c6856d0f28

:040000 040000 2d10f18c991e766c5a3520aedb39bb83db0a16cc dacd2abf975e3ef251c54faed947e21de296d5f4 M	opt

So, the two commits in range are
https://cgit.freedesktop.org/libreoffice/core/commit/?id=a9f94e571cb5797413d2d03f709084779fcfc914
https://cgit.freedesktop.org/libreoffice/core/commit/?id=2bc11eb5f42a7ac7e54ce06eb4270998ed293cfd
Bots are by Matúš Kukan, and the latter is a small build fix for the former. I mark it bisected.
Comment 1 Mike Kaganski 2017-02-08 08:58:43 UTC
Created attachment 131004 [details]
PDF: Correct import in 4.2.0.4
Comment 2 Mike Kaganski 2017-02-08 08:59:05 UTC
Created attachment 131005 [details]
PDF: Wrong import in 4.3.0.4
Comment 3 Mike Kaganski 2017-02-08 08:59:45 UTC
Created attachment 131006 [details]
PDF: MS Word reference
Comment 4 Mike Kaganski 2017-02-08 09:17:17 UTC
Created attachment 131007 [details]
ZIP with RTF that is imported very slowly since version 4.3

This is the original file (generated by ConsultantPlus legislation database) from which test doc (attachment 131003 [details]) was generated.

This file begun to open very slowly (~10x slowdown; ~35 minutes vs 3 minutes on a test machine) in the same commit range. So, I suppose that the slowdown is the same bug, and report it here. If it turns out that it's not, then a separate bug report will be necessary.
Comment 5 Xisco Faulí 2017-02-08 10:09:01 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: fc53cce64400430cdc21f79c959d75fb9a26d13d
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 6 ape 2017-02-08 12:13:39 UTC
Confirmed in

Version: 5.2.5.1
Build ID: 0312e1a284a7d50ca85a365c316c7abbf20a4d22
CPU Threads: 8; OS Version: Windows 5.2; UI Render: default; 
Locale: ru-RU (ru_RU); Calc: group
Comment 7 Mike Kaganski 2017-02-09 12:58:16 UTC
Absolutely have no idea why bibisect-43max marks those commits. I am sure that the real commit caused the problem was https://cgit.freedesktop.org/libreoffice/core/commit/?id=97dcf77841d19d344d58d5bdacdab141cdea4817, which is almost a month earlier.

I see another bug 105638 that seem to suffer from the same bibisect inaccuracy.

Posted a patch to gerrit: https://gerrit.libreoffice.org/34079/
Comment 8 Commit Notification 2017-02-09 15:24:05 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d48b805794a6317e13826d52bbeaa37576ac57bb

tdf#105852: don't merge cells if there were no merge continuation

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 ape 2017-02-24 08:25:25 UTC
This bug fixed:

Version: 5.4.0.0.alpha0+
Build ID: a8538f0774bd0fabf6012d735d1e86b3ff1c291f
CPU threads: 8; OS: Windows 5.2; UI render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2017-02-23_23:42:53
Locale: ru-RU (ru_RU); Calc: group