writerfilter/source/dmapper/DomainMapperTableHandler.cxx
@@ -1042,12 +1042,16 @@ void DomainMapperTableHandler::endTable(unsigned int nestedTableLevel, bool bTab
                             uno::Reference<table::XCellRange> xCellRange(xTable, uno::UNO_QUERY_THROW);
                             uno::Reference<beans::XPropertySet> xCell(xCellRange->getCellByPosition(it->m_nFirstCol, it->m_nFirstRow), uno::UNO_QUERY_THROW);
                             OUString aFirst = xCell->getPropertyValue("CellName").get<OUString>();
-                            xCell.set(xCellRange->getCellByPosition(it->m_nLastCol, it->m_nLastRow), uno::UNO_QUERY_THROW);
-                            OUString aLast = xCell->getPropertyValue("CellName").get<OUString>();
+                            // tdf#105852: Only try to merge if m_nLastCol is set (i.e. there were some merge continuation cells)
+                            if (it->m_nLastCol != -1)
+                            {
+                                xCell.set(xCellRange->getCellByPosition(it->m_nLastCol, it->m_nLastRow), uno::UNO_QUERY_THROW);
+                                OUString aLast = xCell->getPropertyValue("CellName").get<OUString>();
 
-                            uno::Reference<text::XTextTableCursor> xCursor = xTable->createCursorByCellName(aFirst);
-                            xCursor->gotoCellByName(aLast, true);
-                            xCursor->mergeRange();
+                                uno::Reference<text::XTextTableCursor> xCursor = xTable->createCursorByCellName(aFirst);
+                                xCursor->gotoCellByName(aLast, true);
+                                xCursor->mergeRange();
+                            }
                         }
                     }
                 }
